14_15_multi_container_ingress_k8s/k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: api-cluster-ip
              servicePort: 5000
